Restyled buttons on beer edits

--- a/styles/handlebars/beer_table.handlebars
+++ b/styles/handlebars/beer_table.handlebars
@@ -38,5 +38,8 @@
 </div>
 {{/each}}
 {{#if editing}}
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addBeer">Add Beer</button>
+<div class="edit-buttons">
+  <button type="button" class="btn edit-button" data-toggle="modal" data-target="#addChallengeBeer">Add Challenge Beer</button>
+  <button type="button" class="btn btn-primary edit-button" data-toggle="modal" data-target="#addBeer">Add Beer</button>
+</div>
 {{/if}}
