--- a/beers/templates/base/base.html
+++ b/beers/templates/base/base.html
@@ -3,6 +3,11 @@
 <html>
 	<head>
         <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}"/>
+        <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap-theme.min.css" %}"/>
+        <script src="{% static "jquery/dist/jquery.min.js" %}"></script>
+        <script src="{% static "bootstrap/dist/js/bootstrap.min.js" %}"></script>
+{% comment %}
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
         <!-- Optional theme -->
@@ -15,6 +20,7 @@
         
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+{% endcomment %}
 
 		<link rel="stylesheet" href="{% static "css/beers.css" %}"/>
 		{% block scripts %}{% endblock %}
