--- a/beers/templates/beers/contest.html
+++ b/beers/templates/beers/contest.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="{% static 'select2/dist/js/select2.min.js' %}"></script>
   {{ form.media }}
   {% if is_creator %}
+  <script type="text/javascript" src="{% static 'handlebars/dist/handlebars.runtime.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/templates.runtime.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/api.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/validate.js' %}"></script>
@@ -41,6 +42,7 @@
       {% if not contest.active and is_creator %}
       contest.editing = true;
       EditContest.displayBeers(contest);
+      EditContest.displayBreweries(contest);
       {% endif %}
       Validate.displayCheckins(contest, 1);
   });
@@ -51,6 +53,7 @@
 {% block content %}
 {% if not contest.active and is_creator %}
 {% include "includes/add-beer-modal.html" %}
+{% include "includes/add-brewery-modal.html" %}
 {% endif %}
 	<div class="page-header">
 		<h1>{{ contest.name }}</h1>
