Added class for selecting alert

--- a/beers/templates/includes/add-beer-modal.html
+++ b/beers/templates/includes/add-beer-modal.html
@@ -5,7 +5,7 @@
         <h3 class="modal-title">Add Beer</h3>
       </div>
       <div class="modal-body">
-      <div id="alert-for-modal"></div>
+      <div id="alert-for-beer-modal" class="alert-for-modal"></div>
       <form>
         <div class="form-inline">
           <div class="form-group">
