Updated beer and brewery presentation updates

--- a/styles/handlebars/beer_table.handlebars
+++ b/styles/handlebars/beer_table.handlebars
@@ -1,5 +1,6 @@
 
 <div id="alert-for-beer" class="alert-for-tab"></div>
+<div class="beer-table">
 <div class="row beer-row beer-header">
   <div class="col-xs-5">Beer</div>
   <div class="col-xs-5">Brewery</div>
@@ -47,6 +48,7 @@
     {{/if}}
 </div>
 {{/each}}
+</div>
 {{#if editing}}
 <div class="edit-buttons">
   <button type="button" class="btn edit-button" data-toggle="modal" data-target="#addChallengeBeer">Add Challenge Beer</button>
