--- a/styles/handlebars/brewery_table.handlebars
+++ b/styles/handlebars/brewery_table.handlebars
@@ -1,4 +1,5 @@
 <div id="alert-for-brewery" class="alert-for-tab"></div>
+<div class="brewery-table">
 <div class="row brewery-row brewery-header">
   <div class="col-xs-5">Brewery</div>
   <div class="col-xs-5">Location</div>
@@ -42,6 +43,7 @@
     {{/if}}
 </div>
 {{/each}}
+</div>
 {{#if editing}}
 <div class="edit-buttons">
   <button type="button" class="btn edit-button" data-toggle="modal" data-target="#addChallengeBrewery">Add Challenge Brewery</button>
