--- a/beers/templates/includes/add-beer-modal.html
+++ b/beers/templates/includes/add-beer-modal.html
@@ -26,9 +26,37 @@
           <label class="control-label" for="brewery_url">Brewery URL</label>
           <input id="brewery_url" class="form-control" type="text" placeholder="Brewery URL"/>
         </div>
-        <div class="form-group">
-          <label class="control-label" for="point_value">Point value</label>
-          <input id="point_value" class="form-control" type="text" placeholder="Point"/>
+        <div class="row">
+          <div class="checkbox col-xs-3">
+            <label for="is-beer-challenge">
+              <input id="is-beer-challenge" type="checkbox"/>Challenge?
+            </label>
+          </div>
+          <div class="form-group col-xs-9">
+            <label class="control-label" for="challenger">Challenger</label>
+            <select id="challenger" disabled="true" class="form-control beer-challenge-input">
+            </select>
+          </div>
+        </div>
+        <div id="beer-points" class="row">
+          <div class="form-group col-xs-6">
+            <label class="control-label" for="point_value">Points</label>
+            <input id="point_value" class="form-control" type="text" value="1"/>
+          </div>
+          <div class="form-group col-xs-6">
+            <label class="control-label" for="challenge_point_value">Challenge Points</label>
+            <input id="challenge_point_value" class="form-control beer-challenge-input" type="text" disabled="true" value="12"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="form-group col-xs-6">
+            <label class="control-label" for="challenge_point_loss">Challenge Loss</label>
+            <input id="challenge_point_loss" class="form-control beer-challenge-input" type="text" disabled="true" value="3"/>
+          </div>
+          <div class="form-group col-xs-6">
+            <label class="control-label" for="max_point_loss">Max Loss</label>
+            <input id="max_point_loss" class="form-control beer-challenge-input" type="text" disabled="true" value="3"/>
+          </div>
         </div>
       </form>
       </div>
