Reformatted contests page

--- a/beers/templates/beers/contests.html
+++ b/beers/templates/beers/contests.html
@@ -7,8 +7,8 @@
 {% block content %}
   <h1>All contests</h1>
 
-  <div class="contests">
-    <table>
+  <div class="container">
+    <table class="table table-striped">
       <tr>
         <th>Contest</th>
         <th>Creator</th>
